--- a/about_us.html
+++ b/about_us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Về Chúng Tôi - Gian Hàng Nhật Bản</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="" />
   </head>
   <body>
     <nav class="navbar-container">
@@ -38,8 +38,8 @@
           />
         </div>
         <div class="text-right">
-           <h2>CẦU BÙA OMAMORI</h2>
-            <p>
+          <h2>CẦU BÙA OMAMORI</h2>
+          <p>
             Bùa Omamori Nhật Bản là vật phẩm tâm linh phổ biến, tượng trưng cho
             sự bảo vệ, mang lại may mắn, bình an và xua đuổi tà khí, tai ương
             trong cuộc sống. Được bán tại các đền, chùa, mỗi chiếc bùa chứa lời
@@ -62,7 +62,6 @@
             <li><span class="food-icon">🍹</span> Soda</li>
             <li><span class="food-icon">🍜</span> Mì Soba</li>
             <li><span class="food-icon">🍡</span> Bánh Dango</li>
-            
           </ul>
           <p>
             Mỗi món ăn không chỉ làm hài lòng vị giác mà còn kể câu chuyện về
@@ -70,11 +69,7 @@
           </p>
         </div>
         <div class="image-right">
-          <img
-            src="menu-food.png"
-            alt="Món ăn Nhật Bản"
-            class="about-image"
-          />
+          <img src="menu-food.png" alt="Món ăn Nhật Bản" class="about-image" />
         </div>
       </section>
 
@@ -108,6 +103,5 @@
         </div>
       </section>
     </main>
-
   </body>
 </html>
