--- a/about_us.html
+++ b/about_us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Về Chúng Tôi - Gian Hàng Nhật Bản</title>
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="navbar-container">
