--- a/clothes.html
+++ b/clothes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trang phục truyền thống của Nhật Bản</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
@@ -72,6 +72,6 @@
 
   
 
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
