--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cụm 6 - 12.3 11.7 10.8</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="navbar-container">
@@ -243,6 +243,6 @@
       
     </section>
 
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
