--- a/pop_culture.html
+++ b/pop_culture.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Văn hóa Nhật Bản</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <style>
       body {
         background-color: #1a1a1a;
@@ -150,6 +150,6 @@
       </div>
     </section>
 
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
