--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Đố vui về Nhật Bản</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <style>
       .quiz-container {
         background: white;
@@ -115,7 +115,7 @@
       </div>
     </section>
 
-    <script src="js/quiz.js"></script>
-    <script src="js/main.js"></script>
+    <script src="quiz.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
