--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <section id="discover" class="section">
       <div class="container">
         <div style="text-align: center; margin-bottom: 4rem">
-          <h2>xỨ SỞ MẶT TRỜI MỌC</h2>
+          <h2>XỨ SỞ MẶT TRỜI MỌC</h2>
           <section class="stats-container">
             <div class="stat-card">
               <h3>70%</h3>
@@ -96,7 +96,7 @@
               <div class="anime-item">
                 <img src="https://vj-prod-website-cms.s3.ap-southeast-1.amazonaws.com/shutterstock1265891953huge-1675854591428.jpg" alt="NÚI PHÚ SĨ
 " />
-                <h4>NÚI PHÚ Sĩ
+                <h4>NÚI PHÚ SĨ
 </h4>
                 <p>Ngọn núi lửa này nằm trên hòn đảo lớn nhất của quần đảo Nhật Bản, và là điểm cao nhất của đất nước (3.776 mét trên mực nước biển).</p>
               </div>
