--- a/clothes.html
+++ b/clothes.html
@@ -22,7 +22,7 @@
     </ul>
 </nav>
 
-    <header style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1522880053916-d343467683ca?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center; height: 60vh; display: flex; align-items: center; justify-content: center; text-align: center; color: white;">
+    <header style="background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://toptentravel.com.vn/Data/Sites/1/News/5203/nhung-loai-trang-phuc-truyen-thong-cua-nguoi-nhat-2.jpg'); background-size: cover; background-position: center; height: 60vh; display: flex; align-items: center; justify-content: center; text-align: center; color: white;">
         <div class="container fade-in">
             <h1 style="font-size: 3.5rem; color: white;">TRANG PHỤC TRUYỀN THỐNG CỦA NHẬT BẢN</h1>
         </div>
